# wok-engine

./: CLAUDE.md  Cargo.toml  HISTORY.md  philosophy.md
.claude/: settings.json
designs/: content-authoring-design.md  editor-design.md  high-level-design.md  multiplayer-model.md  orchestrator-handbook.md  orchestrator-state.md  project-canon.md  sharp-edges.md  wok-content-plan.md  wok-scene-plan.md
designs/design_handoff_editor_surfaces/: README.md  editor-surfaces-spec.html
designs/design_handoff_editor_surfaces/views/: 1-scene-view.md  2-nav-panel.md  3-place-mode.md  4-terrain.md  5-prefab-editor.md  6-lighting.md  7-playtest.md  8-integrity.md
designs/memos/: wok-content-v0.1.0.md  wok-scene-v0.2.0.md
taste/: Cargo.toml  tuning.json
taste/assets/lighting/: default.json
taste/assets/prefabs/: boulder.json  crate.json  marker.json  pillar.json
taste/assets/scenes/sample/: 0_0.json  scene.json
taste/src/: air.rs  air_feel.rs  app.rs  cli.rs  clock.rs  constants.rs  content.rs  debug.rs  diagnose.rs  fade.rs  follow.rs  intent.rs  jump.rs  landing.rs  main.rs  precision.rs  replay.rs  sim.rs  slide.rs  slide_feel.rs  tuning.rs  world.rs
taste/src/constants/: camera.rs  debug.rs  mod.rs  movement.rs
tests-integration/fixtures/: README.md  registry.json
tests-integration/fixtures/prefabs/: interactable-box.json  player-capsule.json  room-floor.json  room-walls.json  trigger-pad.json
tests-integration/fixtures/scenes/room/: 0_0.json  scene.json
wok/: Cargo.toml
wok-content/: Cargo.toml
wok-content/src/: config.rs  error.rs  fixture.rs  lib.rs  runtime.rs  state.rs  store.rs  system.rs
wok-content/src/chunk/: load.rs  mod.rs  slot.rs  transition.rs  unload.rs
wok-content/src/primitives/: capsule.rs  cube.rs  cylinder.rs  ellipsoid.rs  mod.rs  plane.rs
wok-content/src/registry/: alloc.rs  entry.rs  mod.rs  populate.rs  rename.rs  serde.rs  view.rs
wok-content/src/storage/: mesh.rs  mod.rs
wok-content/src/terrain/: mesh.rs  mod.rs  palette.rs
wok-content/src/worker/: mod.rs  pipeline.rs  protocol.rs
wok-content/tests/: chunk_lifecycle.rs  fixtures.rs  primitives.rs  registry.rs  storage_gpu.rs  terrain.rs  transition.rs
wok-content/tests/common/: mod.rs
wok-light/: Cargo.toml
wok-light/src/: curve.rs  error.rs  io.rs  lib.rs  point.rs  serde_vec3.rs  state.rs
wok-mesh/: Cargo.toml
wok-mesh/src/: capsule.rs  cube.rs  cylinder.rs  ellipsoid.rs  gpu.rs  lib.rs  mesh.rs  primitive.rs  surface.rs  terrain.rs
wok-physics/: Cargo.toml
wok-physics/src/: bounds.rs  camera.rs  capsule.rs  classify.rs  collider.rs  collision.rs  cylinder.rs  geom.rs  lib.rs  motion.rs  pick.rs  slide.rs  smoothing.rs  sweep.rs  sweep_cyl.rs  sweep_cyl_obb.rs  sweep_cyl_round.rs  sweep_obb.rs  sweep_round.rs  terrain.rs  terrain_cyl.rs
wok-physics/tests/: locomotion_replay.rs
wok-physics/tests/common/: mod.rs
wok-platform/: Cargo.toml
wok-platform/src/: lib.rs
wok-platform/src/audio/: mod.rs
wok-platform/src/gfx/: mod.rs
wok-platform/src/input/: mod.rs
wok-platform/src/platform/: mod.rs
wok-render/: Cargo.toml
wok-render/examples/: viewer.rs
wok-render/src/: lib.rs  pipeline.rs  renderer.rs  shadow.rs  uniforms.rs
wok-render/src/shaders/: common.wgsl  line.wgsl  mesh.wgsl  shadow.wgsl  sky.wgsl
wok-render/tests/: headless.rs
wok-render/tests/headless/: forward.rs  lines.rs  main.rs  shadow.rs
wok-scene/: Cargo.toml  README.md
wok-scene/src/: chunk.rs  error.rs  heightmap.rs  heightmap_io.rs  io.rs  layout.rs  lib.rs  load.rs  math.rs  prefab.rs  refs.rs  sampling.rs  save.rs  scene.rs  serde_format.rs  slice.rs  watch.rs  watcher.rs
wok-scene/src/authored/: chunk.rs  mod.rs  prefab.rs  scene.rs  shape.rs  streaming.rs  terrain.rs
wok-scene/src/ids/: assets.rs  chunk.rs  content.rs  mod.rs  slug.rs
wok-scene/src/runtime/: chunk.rs  mod.rs  region.rs  shape.rs  terrain.rs
wok-scene/tests/: asset_ids.rs  file_io.rs  integration.rs  round_trip.rs  slice.rs  terrain_sampling.rs  validate.rs  watcher.rs
wok/assets/: README.md
wok/src/: action.rs  actions.rs  app.rs  camera.rs  cli.rs  content.rs  details.rs  drag.rs  edit_ops.rs  euler.rs  geom.rs  gizmo.rs  glyphs.rs  gui.rs  history.rs  icons.rs  input.rs  inspector.rs  interaction.rs  library.rs  lines.rs  loaded.rs  main.rs  menu.rs  mode.rs  model.rs  orbit.rs  outline.rs  pages.rs  panels.rs  pick.rs  place.rs  project.rs  recent.rs  reload.rs  render.rs  render_scene.rs  sample.rs  scene.rs  selection.rs  (+8 more)
wok/src/camera/: modes.rs
wok/src/details/: collision.rs  mod.rs  rotation.rs
wok/src/input/: camera.rs  marquee.rs  mod.rs  object.rs  reposition.rs  viewport.rs
wok/src/model/: kinds.rs
wok/src/view/: tests.rs
wok/src/workspace/: editor.rs  instances.rs  nav.rs  tabs.rs
wok/tests/snapshots/: .gitignore
