[workspace]
members = ["wok-platform", "wok-scene"]
resolver = "3"

[workspace.dependencies]
winit = "0.30"
wgpu = "24"
cpal = "0.15"
gilrs = "0.11"
notify = "8"
glam = "0.29"
log = "0.4"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
