[workspace]
members = ["wok-platform", "wok-scene", "wok-physics", "wok-mesh", "wok-light", "wok-content", "wok-render", "wok", "taste"]
resolver = "3"

[workspace.dependencies]
winit = "0.30"
wgpu = "24"
# The editor's UI toolkit. 0.31 is the egui line built against wgpu 24 and winit 0.30, the same
# versions wok-platform pins; these are dependencies of the wok application only, never of an
# engine crate.
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
# Native OS file dialog, for the editor's Open Project. A wok-application dependency only, like the
# egui trio; its version is standalone (not coupled to the wgpu/winit pins). Only the synchronous
# picker is used, so no async-runtime feature is enabled.
rfd = { version = "0.17", default-features = false }
cpal = "0.15"
gilrs = "0.11"
notify = "8"
glam = "0.29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
