[package]
name = "wok-platform"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# Pedantic gives us strong defaults; the allows below tune it down to "actually useful"
# rather than "every stylistic preference clippy has".
pedantic                          = { level = "warn", priority = -1 }

# Casts: clippy::pedantic flags every `as` conversion that could theoretically lose
# information. In graphics + platform code we constantly cast usize/u32/i32/f32/f64
# between vertex counts, screen coords, color channels, and event timestamps - all
# bounded by domain. Re-enable any of these if we add code paths that handle untrusted
# external sizes (file inputs, network frames, user-supplied counts).
cast_lossless                     = "allow"
cast_possible_truncation          = "allow"
cast_possible_wrap                = "allow"
cast_precision_loss               = "allow"
cast_sign_loss                    = "allow"

# Style noise: these flag patterns we've made deliberate calls on and don't want to keep
# defending in review. None of them point at bugs.
collapsible_if                    = "allow"
default_trait_access              = "allow"
doc_lazy_continuation             = "allow"
doc_markdown                      = "allow"
items_after_statements            = "allow"
many_single_char_names            = "allow"
match_same_arms                   = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc                = "allow"
missing_panics_doc                = "allow"
must_use_candidate                = "allow"
needless_lifetimes                = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use          = "allow"
similar_names                     = "allow"
single_match_else                 = "allow"
struct_excessive_bools            = "allow"
too_many_arguments                = "allow"
too_many_lines                    = "allow"
uninlined_format_args             = "allow"
unnecessary_wraps                 = "allow"
unused_self                       = "allow"

[dependencies]
winit.workspace = true
wgpu.workspace = true
cpal.workspace = true
gilrs.workspace = true
log.workspace = true
pollster.workspace = true
bytemuck.workspace = true
