[package]
name = "wok-scene"
version = "0.2.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Style noise that doesn't point at bugs - mirrors pantry's already-triaged set, narrowed
# to what actually fires here. Add more as they show up.
cast_possible_truncation = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

[dependencies]
pantry = { path = "../../pantry" }
notify = "8"
# Sibling of notify, picked over notify-debouncer-mini because it preserves event kinds
# (Create/Modify/Remove). The watcher's classifier branches on Remove vs Change; mini
# coalesces all kinds into "Any" and would force post-hoc stat calls to recover the kind.
notify-debouncer-full = "0.6"

[dev-dependencies]
tempfile = "3"
