[package]
name = "wok"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# Same lint posture as the engine crates: pedantic on, with the same set of stylistic and
# domain-specific noise allowed. Keep the crates in sync so house style is one decision, not many.
pedantic                          = { level = "warn", priority = -1 }

cast_lossless                     = "allow"
cast_possible_truncation          = "allow"
cast_possible_wrap                = "allow"
cast_precision_loss               = "allow"
cast_sign_loss                    = "allow"

collapsible_if                    = "allow"
default_trait_access              = "allow"
doc_lazy_continuation             = "allow"
doc_markdown                      = "allow"
items_after_statements            = "allow"
many_single_char_names            = "allow"
match_same_arms                   = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc                = "allow"
missing_panics_doc                = "allow"
must_use_candidate                = "allow"
needless_lifetimes                = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use          = "allow"
similar_names                     = "allow"
single_match_else                 = "allow"
struct_excessive_bools            = "allow"
too_many_arguments                = "allow"
too_many_lines                    = "allow"
uninlined_format_args             = "allow"
unnecessary_wraps                 = "allow"
unused_self                       = "allow"

# The window/GPU/frame-loop substrate plus the egui chrome (egui / egui-wgpu / egui-winit 0.31, the
# line built against the wgpu 24 and winit 0.30 wok-platform pins). egui is a wok-application
# dependency only; no engine crate may depend on it. rfd is the OS-native folder picker for the File
# menu's Open Project, default-features off so only the synchronous WinAPI backend is pulled (no async
# runtime). wok-scene is the data layer the editor composes: the navigation panel lists the open
# project's content through its `ContentLayout` scan, and the authored placements it edits are wok-scene
# `Chunk`s. The render stack returns with the 3D viewport that draws the open scene: wok-content
# (`transform_chunk` -> the runtime arrays the viewport reads), wok-mesh (primitive + terrain meshes and
# their GPU upload), wok-render (the forward pass into the editor well), and wok-light (the `LightState`
# the viewport loads and hands the renderer each frame - wok-render consumes it but does not re-export
# it, so the editor names it directly).
[dependencies]
wok-platform = { path = "../wok-platform" }
wok-scene = { path = "../wok-scene" }
wok-content = { path = "../wok-content" }
wok-mesh = { path = "../wok-mesh" }
wok-render = { path = "../wok-render" }
wok-light = { path = "../wok-light" }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
rfd.workspace = true
# The workspace's math crate (already vendored - every engine crate uses it), wired to the editor for
# the inspector's read-only rotation readout: a placement's quaternion is decomposed to YXZ Euler
# degrees (`glam::EulerRot`) for the X/Y/Z fields. wok-scene re-exports `Quat`/`Transform` but not the
# Euler enum, and it is an engine crate the editor must not edit, so glam is named here, in the
# application, rather than reached through it. No new crate enters the build graph.
glam.workspace = true

# Dev-only: renders the chrome through the view functions to a PNG for the snapshot regression test
# (tests/snapshots). The wgpu feature draws via a headless GPU (the same wgpu 24 the workspace pins);
# snapshot brings the dify image-diff. Matched to egui 0.31, never a runtime or engine dependency.
#
# kittest queries the accessibility tree, so it turns on egui's accesskit feature. Cargo's feature
# unification then expects egui-winit's matching accesskit path to be compiled too; enabling it here,
# in dev-dependencies, satisfies the test build without reaching the shipped editor (resolver 3 keeps
# dev-dependency features out of a normal `cargo build`). Do not remove it, or the snapshot build
# breaks with an obscure feature-unification error (see designs/sharp-edges.md section 3).
[dev-dependencies]
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot"] }
egui-winit = { workspace = true, features = ["accesskit"] }
